crates/compiler/src/tests/e2e/good/0541_pattern_match_literals/main.gom
fn main() {
    let x: int32 = 10;
    let y = match x {
        1 => "one",
        2 => "two",
        n => n.to_string(),
    };
    println(y);
}
