crates/compiler/src/tests/e2e/bad/0028_vec_mixed_types/main.gom
fn main() -> unit {
  let nums = Vec::new();
  let nums = nums.push(1);
  let nums = nums.push(2);
  let nums = nums.push("three");
  ()
}
